--- a/client/src/test.html
+++ b/client/src/test.html
@@ -1,3 +1,6 @@
-//CSS СЕЛЕКТОРЫ
-//ВЕС СЕЛЕКТОРОВ
-//деструктуризация
+//CSS СЕЛЕКТОРЫ //ВЕС СЕЛЕКТОРОВ //деструктуризация
+
+1. form - html+css (reg, sign)
+2. erros
+3. mobile version
+4. useState
