--- a/client/src/myTest/test.html
+++ b/client/src/myTest/test.html
@@ -4,3 +4,40 @@
 2. erros
 3. mobile version
 4. useState
+
+СТРУКТУРА:
+
+1. Components -> компоненты которые используется больше 1 раза, hoc
+2. pages / views -> страницы
+
+
+components
+  TextField
+    TextField.tsx -> код компонента
+    index.ts -> импорт (export {TextField} from "./TextField" )
+    TextField.css
+pages
+  LoginPage
+    LoginPage.tsx 
+    LoginPage.css
+    index.ts 
+    components 
+      LoginForm.tsx 
+      RegisterForm.tsx
+    utils
+      utils.ts
+
+modal
+
+1. Начальное состояние оишбки = null
+2. если ошибка = null - не показываем попап, иначе показываем + таймер и сетим null
+3. Если произошла ошибка нетворка/сервера сетим текст ошибки в попап
+4. добавить элемент закрытия попап
+
+подписываемся на состояние текста ошибки в попапе в App
+isTextErrorPopUp ? ErrorPopUp : false
+
+таймер
+if(isTextErrorPopUp) {
+  setTimeout(setTextErrorPopUp(null), 5000)
+}
